force-app/main/default/objects/Agent__c/fields/LocaleId__c.field-meta.xml
<CustomField>
    <fullName>LocaleId__c</fullName>
    <label>Locale Id</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>