force-app/main/default/objects/Agent__c/fields/TimeZone__c.field-meta.xml
<CustomField>
    <fullName>TimeZone__c</fullName>
    <label>Time Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>