force-app/main/default/objects/Agent__c/fields/ZendeskId__c.field-meta.xml
<CustomField>
    <fullName>ZendeskId__c</fullName>
    <externalId>true</externalId>
    <label>Zendesk Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>