force-app/main/default/objects/Agent__c/fields/ZendeskUrl__c.field-meta.xml
<CustomField>
    <fullName>ZendeskUrl__c</fullName>
    <label>Zendesk Url</label>
    <type>Url</type>
</CustomField>