force-app/main/default/objects/Agent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Locale__c</columns>
    <columns>Role__c</columns>
    <columns>TimeZone__c</columns>
    <columns>Verified__c</columns>
    <columns>Active__c</columns>
    <columns>Agent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>